--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ html {
 
 body {
   font-size: 1.6rem;
-  font-family: "Special Elite", sans-serif;
+  font-family: "Source Sans Pro", sans-serif;
   color: #0f1926;
   background-color: #ebebeb;
 }
@@ -30,6 +30,10 @@ img {
 #icons li {
   float: left;
   /*position: relative;*/
+}
+
+h1 {
+  font-family: "Special Elite", sans-serif;
 }
 
 /* -------------------------------- 
@@ -74,7 +78,7 @@ Intro page
   z-index: 2;
   height: 100vh;
   width: 100%;
-  background-color: #262f3b;
+  background-color: #A6A6A6;
   /* used to vertical align its content */
   display: table;
   -webkit-transition: -webkit-transform 0.5s;
@@ -164,7 +168,7 @@ Projects Slider
   width: 100%;
   height: 100%;
   visibility: hidden;
-  background-color: #0f1926;
+  background-color: #1F1F1F;
   -webkit-transition: visibility 0s 0.5s;
   -moz-transition: visibility 0s 0.5s;
   transition: visibility 0s 0.5s;
