--- a/css/style.css
+++ b/css/style.css
@@ -697,7 +697,7 @@ Project content panel
   width: 100%;
   height: 100%;
   visibility: hidden;
-  background-color: #ebebeb;
+  background-color: #ebebed;
   /* Force Hardware Acceleration */
   -webkit-transform: translateZ(0);
   -moz-transform: translateZ(0);
